--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsdom": "^3.1.2",
     "ramda": "^0.17.1",
     "xmlserializer": "^0.3.3",
-    "xtend": "^4.0.0"
+    "xtend": "^4.0.0",
+    "svgexport": "^0.2.4"
   }
 }
