--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "csv-parse": "^1.0.0",
     "jsdom": "^3.1.2",
     "ramda": "^0.17.1",
+    "svgexport": "^0.2.4",
+    "sync-request": "^2.0.1",
     "xmlserializer": "^0.3.3",
-    "xtend": "^4.0.0",
-    "svgexport": "^0.2.4"
+    "xtend": "^4.0.0"
   }
 }
